# openvino

./: CMakeLists.txt  README.md  openvino_version.txt
.github/workflows/: build.yml
cmake/: dependencies.cmake
inference-engine/src/gna_plugin/: CMakeLists.txt  connection_details.hpp  dnn.cpp  dnn.h  dnn_components.cpp  dnn_components.hpp  dnn_memory.cpp  dnn_memory.hpp  dnn_traits.hpp  floatmath.cpp  floatmath.h  gna2_model_debug_log.cpp  gna2_model_debug_log.hpp  gna2_model_export_helper.cpp  gna2_model_export_helper.hpp  gna2_model_helper.cpp  gna2_model_helper.hpp  gna_allocator.hpp  gna_api_wrapper.hpp  gna_data_types.hpp  gna_device.cpp  gna_device.hpp  gna_executable_network.hpp  gna_fused_iterator.hpp  gna_graph_compiler.cpp  gna_graph_compiler.hpp  gna_graph_tools.hpp  gna_helper.cpp  gna_infer_request.hpp  gna_layer_info.hpp  gna_lib_ver_selector.hpp  gna_mem_requests.hpp  gna_memory.hpp  gna_memory_state.hpp  gna_model_serial.cpp  gna_model_serial.hpp  gna_pass_manager.cpp  gna_pass_manager.hpp  gna_plugin.cpp  gna_plugin.hpp  (+20 more)
inference-engine/src/gna_plugin/backend/: am_intel_dnn.cpp  am_intel_dnn.hpp  dnn.cpp  dnn.hpp  dnn_components.cpp  dnn_components.hpp  dnn_dump.cpp  dnn_dump.hpp  dnn_traits.hpp  dnn_types.h  make_pwl.cpp  make_pwl.hpp
inference-engine/src/gna_plugin/descriptions/: gna_flags.hpp  gna_input_desc.cpp  gna_input_desc.hpp  gna_output_desc.hpp
inference-engine/src/gna_plugin/frontend/: layer_quantizer.hpp  model_quantizer.hpp  quantization.cpp  quantization.h  scale_factor_calc.hpp
inference-engine/src/gna_plugin/layers/: gna_concat_layer.hpp  gna_crop_layer.hpp  gna_layer_info.hpp  gna_layer_type.cpp  gna_layer_type.hpp  gna_memory_layer.hpp  gna_split_layer.hpp  layers_builder.hpp
inference-engine/src/gna_plugin/memory/: gna_allocator.hpp  gna_mem_requests.hpp  gna_mem_requests_queue.hpp  gna_memory.hpp  gna_memory_state.hpp  gna_memory_util.cpp  gna_memory_util.hpp  ipolymorph_allocator.hpp  polymorph_allocator.hpp
inference-engine/src/gna_plugin/optimizer/: gna_pass_manager.cpp  gna_pass_manager.hpp
inference-engine/src/gna_plugin/quantization/: layer_quantizer.hpp  model_quantizer.hpp  precision_ex.hpp  quantization.cpp  quantization.h  quantized_layer_params.hpp  scale_factor_calc.hpp  weights_converter.hpp
inference-engine/src/gna_plugin/runtime/: cnn.cpp  cnn.h  floatmath.cpp  floatmath.h  lstm.hpp  pwl.cpp  pwl.h
legacy/: CMakeLists.txt
legacy/tests/: CMakeLists.txt  keep_constant_inputs_tests.cpp  mul_add_conversion_test.cpp
samples/cpp/speech_sample/: main.cpp  speech_sample.hpp  utils.hpp
scripts/: prepare_and_build.ps1  test.ps1
src/cmake/: openvino.cmake
src/inference/include/ie/gna/: gna_config.hpp
src/inference/include/openvino/runtime/intel_gna/: properties.hpp
src/plugins/intel_gna/: gna_graph_compiler.cpp  gna_plugin_log.hpp
src/plugins/intel_gna/backend/: make_pwl.cpp  make_pwl.hpp
src/plugins/intel_gna/frontend/: model_quantizer.hpp
src/plugins/intel_gna/layers/: gna_convolution_layer.cpp  gna_convolution_layer.hpp
src/plugins/intel_gna/optimizer/: gna_pass_manager.cpp
src/plugins/intel_gna/runtime/: pwl.cpp  pwl.h
src/plugins/intel_gna/src/: gna2_model_export_helper.cpp  gna_device.cpp  gna_device.hpp  gna_graph_compiler.cpp  gna_graph_compiler.hpp  gna_graph_tools.hpp  gna_plugin.cpp  gna_plugin_config.cpp
src/plugins/intel_gna/src/backend/: gna_limitations.cpp
src/plugins/intel_gna/src/common/: gna_target.cpp  gna_target.hpp  misc_utils.hpp
src/plugins/intel_gna/src/descriptions/: gna_flags.hpp
src/plugins/intel_gna/src/frontend/: layer_quantizer.cpp
src/plugins/intel_gna/src/memory/: gna_mem_requests_queue.hpp  gna_memory.hpp
src/plugins/intel_gna/src/transformations/: insert_transpose_after_convolution_or_pooling.cpp  insert_transpose_after_convolution_or_pooling.hpp
src/plugins/intel_gna/tests/unit/: gna_plugin_config_test.cpp
tests/: CMakeLists.txt
tests/functional/: CMakeLists.txt
tests/functional/shared_tests_instances/: skip_tests_config.cpp
tests/unit/: CMakeLists.txt
